# CFR-Poker-Bot

./: .gitignore  GOAL.md  README.md  requirements.txt
backend/: __init__.py  main.py
data/: cfr_metrics.json  cfr_metrics_engine_compare.json  cfr_strategy.json  cfr_strategy_python.json  cfr_strategy_rust.json  eval.json  eval_python_engine.json  eval_rust_cfr.json  eval_rust_engine.json  holdem_benchmark.json  holdem_verify.json  performance_summary.md  policy.pt  policy_metrics.json  rust_benchmark.json
data/.matplotlib/: fontlist-v390.json
data/holdem/: holdem_eval.json  holdem_eval_summary.md  holdem_hand_histories.json  holdem_history_analysis.json  holdem_matchup_matrix.json
docs/ai/: AI_CONTEXT.md  ARCHITECTURE.md  CFR_AND_ENGINE_BEHAVIOR.md  METRICS_AND_VALIDATION.md  ROADMAP_AND_PROMPTING.md
engine/: Cargo.toml
engine/src/: holdem.rs  lib.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css  uiState.js
frontend/tests/: layout-contract.test.mjs  ui-contract.test.mjs
leduc_cfr/: __init__.py
leduc_cfr/cfr/: __init__.py  engine.py  trainer.py
leduc_cfr/eval/: __init__.py  metrics.py  rust_engine.py
leduc_cfr/holdem/: __init__.py  (+1 more)
scripts/: analyze_hand_histories.py  benchmark_holdem.py  evaluate.py  evaluate_holdem.py  holdem_matchup_matrix.py  simulate_holdem.py  train_cfr.py  train_policy.py  verify_holdem_engine.py
tests/: test_backend.py  test_cfr.py  test_eval.py  test_holdem.py  test_holdem_eval.py  test_holdem_rust_equivalence.py  test_leduc.py  test_policy.py  test_rust_cfr_engine.py
(+5 files in other folders)
