[package]
name = "leduc-engine"
version = "0.1.0"
edition = "2021"
description = "Standalone Rust Leduc Poker simulator for CFR Poker Bot"

[lib]
name = "leduc_engine"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "train_cfr"
path = "src/bin/train_cfr.rs"

[[bin]]
name = "holdem_bench"
path = "src/bin/holdem_bench.rs"
